# pi-eta-epsilon

./: .ghci  .gitignore  .jfischoff-ghci  LICENSE  README.md  TODO.hs  TROUBLESHOOTING  dualities.hs  pee.history  pi-eta-epsilon.cabal
BNFC-meta-0.3.0.1/: BNFC-meta.cabal
BNFC-meta-0.3.0.1/Bootstrap/: Bootstrap.hs
BNFC-meta-0.3.0.1/Language/: LBNF.hs
BNFC-meta-0.3.0.1/Language/Haskell/TH/: Hide.hs
BNFC-meta-0.3.0.1/Language/LBNF/: CF.hs  CFtoAbstract.hs  CFtoAlex2.hs  CFtoHappy.hs  CFtoLayout.hs  CFtoPrinter.hs  CFtoQQ.hs  Compiletime.hs  GetCF.hs  Grammar.hs  Runtime.hs  TypeChecker.hs  Utils.hs
BNFC-meta-0.3.0.1/examples/GHC6/jll/: JavaletteLight.hs  UseJll.hs
BNFC-meta-0.3.0.1/examples/GHC7/jll/: JavaletteLight.hs  UseJll.hs
include/: fetch-and-build-doctest.sh
src/Language/: PiEtaEpsilon.hs
src/Language/PiEtaEpsilon/: ConstraintSolver.hs  Evaluator.hs  Examples.hs  Parser.hs  Pi.hs  QuasiQuoter.hs  Syntax.hs  Token.hs
src/Language/PiEtaEpsilon/BNFMeta/: Pi.hs  Syntax.hs  Term.hs  Value.hs
src/Language/PiEtaEpsilon/Interactive/: CmdLine.hs  Env.hs  Interpreter.hs  Shell.hs  StatementParser.hs  TermCommands.hs  Version.hs
src/Language/PiEtaEpsilon/Machines/: Counter.hs
src/Language/PiEtaEpsilon/Parser/: Classes.hs  Term.hs  Type.hs  Value.hs
src/Language/PiEtaEpsilon/Pretty/: Class.hs  Debug.hs  REPL.hs
src/Language/PiEtaEpsilon/Visualizer/: Render.hs
tests/: Main.hs  doctests.hs
